fix(#43): increase background contrast on <code> elements (#59)
* fix: improve contrast of <code> background

at 2.1 to 1 it’s still not great but i’m not sure whether this needs to pass 1.4.11 tbh. the text/code is the main bit and that passes.

* chore: increase version number

--- a/_source/assets/css/_config.css
+++ b/_source/assets/css/_config.css
@@ -16,6 +16,9 @@
     --button-hover-background: hsl(from var(--button-background) h s calc(l + 5));
     --button-active-background: hsl(from var(--button-background) h s calc(l - 5));
 
+    --code-border-color: hsl(from var(--background) h s calc(l + 20));
+    --code-background: hsl(from var(--background) h s calc(l + 10));
+
     /* Sizes */
 }
 
@@ -26,6 +29,9 @@
 
     --button-hover-background: hsl(from var(--background) h s calc(l - 5));
     --button-active-background: hsl(from var(--background) h s calc(l - 10));
+
+    --code-border-color: hsl(from var(--background) h s calc(l - 30));
+    --code-background: hsl(from var(--background) h s calc(l - 10));
 }
 
 [data-selected-theme="aurora"] {
